change default database to mysql

--- a/.env.example
+++ b/.env.example
@@ -12,7 +12,12 @@ ADMIN_NAME=admin
 ADMIN_MAIL=admin@admin.dd
 ADMIN_PASSWORD=admin
 
-DB_CONNECTION=sqlite
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=optiGov/cloud-conductor
+DB_USERNAME=root
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
