--- a/resources/playbooks/docker-image.auto-update/playbook.yaml
+++ b/resources/playbooks/docker-image.auto-update/playbook.yaml
@@ -2,13 +2,13 @@
   gather_facts: no
   tasks:
 
-    - name: "Create cronjob `image-{{ image }}` at {{ daily_update_time }} for image {{ image }} with authenticated user."
+    - name: "Create cronjob `image-{{ image }}` at {{ daily_update_time }} for image {{ image }} with authenticated user. Afterwards all unused images will be removed."
       become: true
       ansible.builtin.cron:
           name: "image-{{ image }}"
           minute: "{{ daily_update_time.split(':')[1] }}"
           hour: "{{ daily_update_time.split(':')[0] }}"
-          job: "docker login -u {{ registry_username }} -p {{ registry_password }} {{ registry_url }} && docker pull {{ image }} && docker logout {{ registry_url }}"
+          job: "docker login -u {{ registry_username }} -p {{ registry_password }} {{ registry_url }} && docker pull {{ image }} && docker logout {{ registry_url }} && docker image prune -f"
           state: present
       when:
         - daily_update == true and daily_update_time is defined
@@ -16,13 +16,13 @@
         - registry_username is defined
         - registry_password is defined
 
-    - name: "Create cronjob `image-{{ image }}` at {{ daily_update_time }} for image {{ image }} with unauthenticated user."
+    - name: "Create cronjob `image-{{ image }}` at {{ daily_update_time }} for image {{ image }} with unauthenticated user. Afterwards all unused images will be removed."
       become: true
       ansible.builtin.cron:
           name: "image-{{ image }}"
           minute: "{{ daily_update_time.split(':')[1] }}"
           hour: "{{ daily_update_time.split(':')[0] }}"
-          job: "docker pull {{ image }}"
+          job: "docker pull {{ image }} && docker image prune -f"
           state: present
       when:
         - daily_update == true and daily_update_time is defined
