--- a/resources/playbooks/ipsec-tunnels.apply/playbook.yaml
+++ b/resources/playbooks/ipsec-tunnels.apply/playbook.yaml
@@ -79,7 +79,7 @@
       ansible.builtin.cron:
         name: "ipsec-tunnel-health-check"
         minute: "*/30"
-        job: "/usr/local/share/cloud-conductor/scripts/ipsec-tunnel-health-check.sh"
+        job: "sh /usr/local/share/cloud-conductor/scripts/ipsec-tunnel-health-check.sh"
         state: present
 
     - name: "Copy `iptables-persistent.sh` script from {{ file_iptables_persistent }} to `/usr/local/share/cloud-conductor/scripts/iptables-persistent.sh`"
