--- a/resources/playbooks/server.configure/playbook.yaml
+++ b/resources/playbooks/server.configure/playbook.yaml
@@ -1,5 +1,5 @@
 - hosts: "{{ host }}"
-  gather_facts: no
+  gather_facts: yes
   tasks:
 
     - name: "Update and Upgrade apt packages as sudo on {{ host }}"
@@ -15,23 +15,44 @@
         name: strongswan-starter
         state: present
 
-    - name: "Install Docker repository key"
+    - name: "Ensure required packages for docker are installed"
       become: yes
+      apt:
+        name:
+          - apt-transport-https
+          - ca-certificates
+          - curl
+          - software-properties-common
+        state: present
+        update_cache: yes
+
+    - name: "Add Docker's official GPG key"
       apt_key:
         url: https://download.docker.com/linux/ubuntu/gpg
         state: present
 
-    - name: "Ensure docker registry is available"
+    - name: "Add Docker repository"
       become: yes
       apt_repository:
-        repo: 'deb https://download.docker.com/linux/ubuntu bionic stable'
+        repo: "deb https://download.docker.com/linux/ubuntu {{ ansible_distribution_release }} stable"
         state: present
+        update_cache: yes
 
-    - name: "Install docker and dependencies"
+    - name: "Install Docker and dependencies"
       become: yes
       apt:
-        name: docker-ce
-        update_cache: yes
+        name:
+          - docker-ce
+          - docker-ce-cli
+          - containerd.io
+        state: latest
+
+    - name: "Ensure Docker service is running and enabled"
+      become: yes
+      service:
+        name: docker
+        state: started
+        enabled: true
 
     - name: "Install unattended-upgrades package via apt as sudo on {{ host }}"
       become: yes
