--- a/resources/playbooks/server.configure/playbook.yaml
+++ b/resources/playbooks/server.configure/playbook.yaml
@@ -26,17 +26,25 @@
         state: present
         update_cache: yes
 
-    - name: "Add Docker's official GPG key"
-      apt_key:
-        url: https://download.docker.com/linux/ubuntu/gpg
-        state: present
-
-    - name: "Add Docker repository"
+    - name: "Download and format Docker's GPG key"
       become: yes
-      apt_repository:
-        repo: "deb https://download.docker.com/linux/ubuntu {{ ansible_distribution_release }} stable"
-        state: present
-        update_cache: yes
+      shell: |
+        curl -fsSL https://download.docker.com/linux/ubuntu/gpg | gpg --dearmor -o /usr/share/keyrings/docker-archive-keyring.gpg
+        chmod 0644 /usr/share/keyrings/docker-archive-keyring.gpg
+      args:
+        creates: /usr/share/keyrings/docker-archive-keyring.gpg
+
+    - name: "Set up the Docker repository"
+      become: yes
+      copy:
+        content: |
+          deb [arch=amd64 signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/ubuntu {{ ansible_distribution_release }} stable
+        dest: /etc/apt/sources.list.d/docker.list
+
+    - name: "Update apt cache with Docker repository"
+      become: yes
+      apt:
+        update_cache: true
 
     - name: "Install Docker and dependencies"
       become: yes
