--- a/resources/playbooks/jump-host.configure/playbook.yaml
+++ b/resources/playbooks/jump-host.configure/playbook.yaml
@@ -15,53 +15,6 @@
         name: strongswan-starter
         state: present
 
-    - name: "Ensure required packages for Docker are installed"
-      become: yes
-      apt:
-        name:
-          - apt-transport-https
-          - ca-certificates
-          - curl
-          - software-properties-common
-        state: present
-        update_cache: yes
-
-    - name: "Download and format Docker's GPG key"
-      become: yes
-      shell: |
-        curl -fsSL https://download.docker.com/linux/ubuntu/gpg | gpg --dearmor -o /usr/share/keyrings/docker-archive-keyring.gpg
-        chmod 0644 /usr/share/keyrings/docker-archive-keyring.gpg
-      args:
-        creates: /usr/share/keyrings/docker-archive-keyring.gpg
-
-    - name: "Set up the Docker repository"
-      become: yes
-      copy:
-        content: |
-          deb [arch=amd64 signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/ubuntu {{ ansible_distribution_release }} stable
-        dest: /etc/apt/sources.list.d/docker.list
-
-    - name: "Update apt cache with Docker repository"
-      become: yes
-      apt:
-        update_cache: true
-
-    - name: "Install Docker and dependencies"
-      become: yes
-      apt:
-        name:
-          - docker-ce
-          - docker-ce-cli
-          - containerd.io
-        state: latest
-
-    - name: "Ensure Docker service is running and enabled"
-      become: yes
-      service:
-        name: docker
-        state: started
-        enabled: true
-
     - name: "Install unattended-upgrades package via apt as sudo on {{ host }}"
       become: yes
       apt:
@@ -94,6 +47,32 @@
         owner: "{{ ansible_user }}"
         group: "{{ ansible_user }}"
         mode: 0755
+
+    - name: "Copy `iptables-persistent.sh` script from playbook-files to `/usr/local/share/cloud-conductor/scripts/iptables-persistent.sh`"
+      become: true
+      template:
+        src: "../../playbook-files/jump-host/iptables-persistent.sh"
+        dest: "/usr/local/share/cloud-conductor/scripts/iptables-persistent.sh"
+        owner: root
+        group: root
+        mode: 0644
+
+    - name: "Create cronjob `iptables-persistent` at reboot"
+      become: true
+      ansible.builtin.cron:
+        name: "iptables-persistent"
+        special_time: reboot
+        job: "sh /usr/local/share/cloud-conductor/scripts/iptables-persistent.sh"
+        state: present
+
+    - name: "Execute iptables-persistent.sh script"
+      become: yes
+      shell: "sh /usr/local/share/cloud-conductor/scripts/iptables-persistent.sh"
+
+    - name: "Restart systemd-networkd"
+      become: true
+      shell: "systemctl restart systemd-networkd"
+      register: systemd_networkd_restart
 
     - name: "Remove all but the first line which includes PasswordAuthentication from sshd_config"
       become: yes
